--- a/www/style.css
+++ b/www/style.css
@@ -14,6 +14,14 @@
   ul{
     line-height:1.5em;
   }
+  a{
+    /*color:#D1CDC7;*/
+    font-size: 18px;
+    color:#6EA8FE;
+    letter-spacing: 1px; /* 文字間隔*/
+  
+  }
+
   h2{
     margin: 30px, 0;
   }
@@ -25,18 +33,11 @@
     color:#D1CDC7;
   }
 
-  #cvsCarrelation {
-    background-color: #FFF;
-    border: solid 0.1em;
-    border-color: #DDD;
+  .no-caret{
+    caret-color: transparent;
   }
 
-  #cvsLastYear {
-    background-color: #FFF;
-    border: solid 0.1em;
-    border-color: #DDD;
-  }
-  .input-primary{
+ .input-primary{
     background-color: transparent;
     color:#D1CDC7;
     padding: 10px;
@@ -87,8 +88,8 @@
   }
 
   .button-fill{
-    background: #0062CC;
-    color:#D1CDC7;
+    background: #007bff;
+    color:#e8e6e3;
 
     border-color: #0056b3;
     transition: background-color 0.3s ease; 
